# relink-logs

./: .eslintrc.json  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug.yml  translation.yml
.github/workflows/: ci.yaml  release.yaml
game-reader/: Cargo.toml
game-reader/src/: lib.rs  overmastery.rs  synthesis.rs
protocol/src/: control.rs  lib.rs  toolbox.rs
scripts/: backfill-skills.sh  build-hook-dev.mjs  build.ps1  bump-version.mjs  ci-sign.ps1  dump-exports.py  extract-changelog.mjs  extract-changelog.test.mjs  gbfr_hash.py  gen-overmastery-tables.py  gen-sigil-trait-categories.py  gen-skillboard-layout.py  gen-summon-bonus-values.py  gen-synthesis-excluded-sigils.py  gen-trait-max-levels.py  gen-weapon-traits.py  gen-weapon-transcendence.py  make-latest-json.mjs  next-version.mjs  refresh-dbg-hook.mjs  set-version.mjs
src/: App.css  App.tsx  backendErrors.ts  i18n.ts  newFeatures.test.ts  newFeatures.ts  platform.test.ts  platform.ts  styles.css  synthesisErrors.ts  types.test.ts  types.ts  useHookStatus.test.ts  useHookStatus.ts  useUpdateCheck.test.ts  useUpdateCheck.tsx  utils.test.ts  utils.ts
src-hook/: Cargo.toml  README.md  build.rs
src-hook/src/: control.rs  lib.rs  process.rs  proxy.rs  teardown.rs  toolbox.rs  transport.rs
src-hook/src/hooks/: area.rs  assist.rs  damage.rs  death.rs  diag.rs  endless.rs  ffi.rs  globals.rs  loadprobe.rs  mod.rs  player.rs  quest.rs  sba.rs  stunnet.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: overmastery-tables.json  skill-groups.json  synthesis-excluded-sigils.json
src-tauri/capabilities/: default.json
src-tauri/examples/: action_context.rs  action_flags.rs  cap_check.rs  cap_compare.rs  dot_ids.rs  dot_scan.rs  hp_pools.rs  identity_dump.rs  om_probe.rs  online_diag.rs  party_check.rs  pg_inspect.rs  probe_events.rs  sb_dump.rs  skill_backfill.rs  source_types.rs  stun_attrib.rs  supp_eligibility.rs  supp_ratio.rs  supp_scan.rs  synth_diag.rs  synth_probe.rs  toolbox_probe.rs  wep_dump.rs
src-tauri/lang/: README.md
src-tauri/lang/bp/: abilities.json  characters.json  enemies.json  items.json  quests.json  sigils.json  skillboard.json  summon-bonuses.json  summons.json  traits.json  weapons.json
src-tauri/lang/en/: abilities.json  characters.json  enemies.json  items.json  quests.json  sigils.json  skillboard.json  summon-bonuses.json  summons.json  traits.json  ui.json  weapons.json
src-tauri/lang/es/: abilities.json  characters.json  enemies.json  items.json  quests.json  sigils.json  skillboard.json  summon-bonuses.json  summons.json  traits.json  weapons.json
src-tauri/lang/fr/: abilities.json  characters.json  enemies.json  items.json  quests.json  sigils.json  skillboard.json  summon-bonuses.json  summons.json  traits.json  weapons.json
src-tauri/lang/ge/: abilities.json  characters.json  enemies.json  items.json  quests.json  sigils.json  skillboard.json  summon-bonuses.json  summons.json  traits.json  weapons.json
src-tauri/lang/it/: abilities.json  characters.json  enemies.json  items.json  quests.json  sigils.json  skillboard.json  summon-bonuses.json  summons.json  traits.json  weapons.json
src-tauri/lang/jp/: abilities.json  characters.json  enemies.json  items.json  quests.json  sigils.json  skillboard.json  summon-bonuses.json  summons.json  traits.json  weapons.json
src-tauri/lang/ko/: abilities.json  characters.json  enemies.json  items.json  quests.json  sigils.json  skillboard.json  summon-bonuses.json  summons.json  traits.json  ui.json  weapons.json
src-tauri/lang/zh-CN/: abilities.json  characters.json  enemies.json  items.json  quests.json  sigils.json  skillboard.json  summon-bonuses.json  summons.json  traits.json  ui.json  weapons.json
src-tauri/lang/zh-TW/: abilities.json  characters.json  enemies.json  items.json  quests.json  sigils.json  skillboard.json  summon-bonuses.json  summons.json  traits.json  weapons.json
src-tauri/src/: backfill.rs  control_rpc.rs  data_paths.rs  game_mem.rs  lib.rs  main.rs  rpc.rs  toolbox_rpc.rs
src-tauri/src/db/: logs.rs  mod.rs  runs.rs
src-tauri/src/linux_support/: deploy.rs  mod.rs  steam.rs
src-tauri/src/overmastery/: mod.rs  snapshot.rs
src-tauri/src/parser/: constants.rs
src-tauri/src/parser/v1/: cap_detection.rs  mod.rs  player_state.rs  skill_state.rs
src-tauri/src/synthesis/: mod.rs  snapshot.rs
src-tauri/wix/: main.wxs
src/assets/: character-id-hashes.json  checklist-default.json  overmastery-categories.json  sigil-trait-categories.json  skill-groups.ts  skillboard-layout.json  summon-bonus-values.json  synthesis-traits.json  trait-max-levels.json  weapon-traits.json  weapon-transcendence.json
src/components/: ColumnEditor.tsx  ColumnsPopover.tsx  HookStatusBadge.test.tsx  HookStatusBadge.tsx  NewChip.tsx  OvercapCell.tsx  PlayerRow.tsx  SkillBreakdown.tsx  SkillGroupRow.tsx  SkillRow.test.tsx  SkillRow.tsx  SkillTargetTooltip.test.tsx  SkillTargetTooltip.tsx  StunCell.tsx  (+15 more)
(+76 files in other folders)
