[package]
name = "hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
console = []
# Verbose per-hit dump of the DamageInstance struct (a2) to the fern log, used to
# re-derive shifted field offsets (action_id, damage_cap, ...) after a game patch.
dmgdiag = []
# Runtime-address logger for re-deriving broken FUNCTION hooks after a game patch.
# Logs the module base + the return address (caller RVA) and key pointers from the
# hooks that still work, so triggering an in-game event (death, SBA, player load)
# reveals the RVA of the nearby broken target. See hooks/diag.rs.
hookdiag = ["dep:backtrace"]
# DEV ONLY: unlock the game's built-in Full Assist AI in Infinity quests
# (hooks/assist.rs). Changes game behavior, so it is never built for release.
fullassist = ["dep:serde_json"]

[package.metadata.winres]
OriginalFilename = "hook.dll"
CompanyName = "Relink Logs"
LegalCopyright = "Copyright (C) Relink Logs contributors"

[dependencies]
anyhow = "1.0"
backtrace = { version = "0.3", optional = true }
serde_json = { version = "1.0", optional = true }
ctor = "0.2.6"
dirs = "5.0"
fern = { version = "0.6" }
interprocess = { version = "^2.0", features = ["tokio"] }
log = "0.4"
pelite = "0.10.0"
retour = { version = "0.3.1", features = ["static-detour"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Console", "Win32_System_Memory"] }
futures = "0.3"
protocol = { path = "../protocol" }
tokio-util = { version = "0.7.11", features = ["codec"] }


[dev-dependencies]
# So `hooks/assist.rs` still COMPILES (and its tests run) under a plain `cargo test`,
# which does not enable the `fullassist` feature. Without this the one hook that
# changes game behaviour is the only one whose logic is never type-checked or tested
# by the default suite. The hook is still only INSTALLED behind the feature.
serde_json = "1.0"

[build-dependencies]
winres = "0.1"
