[package]
name = "gbfr-logs"
version = "1.8.0"
description = "GBFR Logs"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gbfr_logs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
dll-syringe = "0.17.1"
futures = "0.3"
interprocess = { version = "^2.0", features = ["tokio"] }
protocol = { path = "../protocol" }
sea-query = { version = "0"}
sea-query-rusqlite = { version = "0", features = ["with-chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio-stream = "0.1.15"
num_enum = "0.7.2"
chrono = "0.4"
rusqlite = { version = "0.30.0", features = ["bundled"] }
rusqlite_migration = "1.1.0"
zstd = "0.13.3"
strum = "0.26"
strum_macros = "0.26"
cbor4ii = { version = "0.3.2", features = ["use_std", "serde1"] }
log = "^0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
